Changes from jTDS 0.5
=======================

01/29/2003 - Alin Sinpalean

 o Fixed CSUnitTest (had a problem because of the MONEY/SMALLMONEY precision
   issue) and modified build.xml (have no idea why it wouldn't work anymore,
   some problem with classpaths, had to execute the tests in the same JVM).
   Removed jakarta-ant-1.3-optional.jar and parser.jar, because they were not
   needed (jakarta-ant-1.4-optional.jar and crimson.jar contain just the same).

01/27/2003 - Alin Sinpalean

 o Fixed bug #664507: DatabaseMetaData.getIndexInfo() called sp_statistics with
   5 parameters instead of 6 (@index_name was missing). Thanks to Simon Kelly
   (simonkelly) for submitting the bug and the solution.
 o Fixed bug #644391: When using PreparedStatement.setObject(Timestamp), the
   date in database in off by a little more than a second, because the nanos
   are disregarded (the Timestamp is treated as Date).

01/20/2003 - Alin Sinpalean

 o jTDS feels completely strange after such a long while. I honestly hope the
   time will come when I'll be able to go back to real development... :(
 o Fixed bug #662295: Tds.writeDateTimeValue() adds nanoseconds twice under JDK
   1.4.1. The Timestamp.getTime() method adds in the nanos, then
   writeDateTimeValue() adds them again (line 3232) (Patrick Johnson -
   pjohnson73). Also some rounding problems when transforming from milliseconds
   to jiffies. The fix checks if the value returned by getTime() is an integral
   number of seconds and only in this case adds the nanoseconds (otherwise they
   were already added by getTime()). For the rounding problem .33 milliseconds
   are added to the value before converting it to jiffies. Seems to work fine.
 o Fixed a problem with MONEY and SMALLMONEY datatypes where the third and
   fourth decimals were intentionally dropped (no idea why).

12/18/2002 - Alin Sinpalean

 o Long time, no jTDS! Hope I'll have some more time to look after jTDS now
   that I found a new job...